--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,16 @@
 name = "vacuum"
 version = "0.1.0"
 authors = ["Tim Brooks <brooks@skoorb.net>"]
+description = "A CLI for listing upcoming spaceflight events"
+homepage = "https://github.com/brookst/vacuum"
+repository = "https://github.com/brookst/vacuum"
+readme = "README.md"
+license = "MIT"
+license-file = "license"
+
+[badges]
+travis-ci = { repository = "brookst/vacuum", branch = "master" }
+maintenance = { status = "experimental" }
 
 [dependencies]
 atty = "0.2.11"
